# rover

workspace/install/: local_setup.sh  setup.sh
workspace/install/launch/: all_nodes_launch.py
workspace/install/rover_controller/lib/rover_controller/: camera_node  joint_state_publisher_gui  joystick_node  robot_state_publisher  rover_control_node
workspace/install/rover_controller/share/rover_controller/: package.sh  package.xml
workspace/install/rover_controller/share/rover_controller/launch/: joystick_launch.py
workspace/install/rover_simulation/share/rover_simulation/: package.dsv  package.ps1  package.sh
workspace/install/rover_simulation/share/rover_simulation/launch/: gazebo_launch.py
workspace/src/rover_controller/: package.xml  setup.py
workspace/src/rover_controller/launch/: all_nodes_launch.py
workspace/src/rover_controller/rover_controller/: camera_node.py  joystick_node.py  robot_state_publisher.py  rover_control_node.py
workspace/src/rover_controller/urdf/: rover.urdf
workspace/src/rover_simulation/: package.xml  setup.py
workspace/src/rover_simulation/launch/: gazebo_launch.py
workspace/src/rover_simulation/urdf/: rover.urdf
