<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_controller</name>
  <version>0.0.0</version>
  <description>A package to control the rover's movement and sensors</description>

  <!-- Maintain your contact information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- Add appropriate license for the project -->
  <license>TODO: License declaration</license>

  <!-- Executive dependencies for the rover_controller package -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend> <!-- Eğer simülasyon ile etkileşim olacaksa ekleyin -->
  <exec_depend>robot_state_publisher</exec_depend> <!-- Robot state publisher için gerekli -->
  <exec_depend>urdf_parser_py</exec_depend> <!-- URDF dosyasını işlemek için gerekli -->

  <!-- Test dependencies for ROS2 package testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exporting build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

